--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,79 +8,25 @@
     tools:context=".HomeActivity"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp"
-        android:gravity="center_vertical"
-        >
 
-        <ImageView
-            android:id="@+id/camerabtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/camera"
-            android:contentDescription="@string/camera_cd"
-            android:padding="4dp"
-            android:layout_gravity="start"
-            app:tint="@color/orange_app"
-            />
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:src="@drawable/socially_logo"
-            android:contentDescription="@string/app_name"
-            android:padding="4dp"
-            android:layout_gravity="center"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:id="@+id/igtvbtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/igtv"
-            android:contentDescription="@string/igtv_cd"
-            android:padding="4dp"
-            android:layout_gravity="end"
-            app:tint="@color/orange_app"/>
-
-        <ImageView
-            android:id="@+id/igdirectbtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/igdirect"
-            android:contentDescription="@string/igdirect_cd"
-            android:padding="4dp"
-            android:layout_gravity="end"
-            app:tint="@color/orange_app"/>
-    </LinearLayout>
-
-    <ScrollView
+    <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:id="@+id/container"/>
 
-        <LinearLayout
-            android:id="@+id/feed_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:labelVisibilityMode="unlabeled"
+        app:itemIconTint="@color/bottom_nav_color"
+        app:itemRippleColor="@color/white"
+        app:itemActiveIndicatorStyle="@null"
+        app:menu="@menu/menu"/>
+
 
 
 </LinearLayout>
