--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange_app">#9B5A5A</color>
+    <color name="dark_orange">#7A3E3E</color>
     <color name="light_gray">#F0F0F0</color>
+    <color name="medium_gray">#C0C0C0</color>
+    <color name="dark_gray">#808080</color>
+    <color name="red">#FFFF0000</color>
+    <color name="green">#FF00FF00</color>
+    <color name="blue">#FF0000FF</color>
+    <color name="yellow">#FFFFFF00</color>
+    <color name="transparent">#00000000</color>
+
 </resources>
