--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -135,7 +135,7 @@
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
                             android:padding="4dp"
-                            android:background="@drawable/person1"
+                            android:background="@drawable/person2"
                             android:layout_gravity="center"/>
 
                         <TextView
@@ -159,7 +159,7 @@
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
                             android:padding="4dp"
-                            android:background="@drawable/person1"
+                            android:background="@drawable/person3"
                             android:layout_gravity="center"/>
                         <TextView
                             android:layout_width="wrap_content"
@@ -182,7 +182,7 @@
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
                             android:padding="4dp"
-                            android:background="@drawable/person1"
+                            android:background="@drawable/person4"
                             android:layout_gravity="center"/>
 
                         <TextView
@@ -206,7 +206,7 @@
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
                             android:padding="4dp"
-                            android:background="@drawable/person1"
+                            android:background="@drawable/person5"
                             android:layout_gravity="center"/>
                         <TextView
                             android:layout_width="wrap_content"
@@ -229,7 +229,7 @@
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
                             android:padding="4dp"
-                            android:background="@drawable/person1"
+                            android:background="@drawable/person6"
                             android:layout_gravity="center"/>
 
                         <TextView
@@ -253,7 +253,7 @@
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
                             android:padding="4dp"
-                            android:background="@drawable/person1"
+                            android:background="@drawable/person7"
                             android:layout_gravity="center"/>
                         <TextView
                             android:layout_width="wrap_content"
@@ -339,7 +339,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/image_12"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             android:layout_marginRight="8dp"
@@ -348,7 +348,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/image_13"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             android:layout_marginRight="8dp"/>
@@ -356,7 +356,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/image_14"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"/>
                     </LinearLayout>
@@ -438,7 +438,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/person3"
                         android:contentDescription="liked_by_cd"
                         android:scaleType="centerCrop"/>
 
@@ -509,7 +509,7 @@
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/person4"
                         android:contentDescription="profile_picture_cd"
                         android:scaleType="centerCrop"/>
                     <LinearLayout
@@ -563,7 +563,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/image_15"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             android:layout_marginRight="8dp"
@@ -572,7 +572,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/image_16"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             android:layout_marginRight="8dp"/>
@@ -580,7 +580,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/image_17"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"/>
                     </LinearLayout>
@@ -662,7 +662,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/person6"
                         android:contentDescription="liked_by_cd"
                         android:scaleType="centerCrop"/>
 
