--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -106,6 +106,7 @@
                         android:gravity="center">
 
                         <ImageView
+                            android:id="@+id/mystory"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
@@ -131,6 +132,7 @@
                         android:gravity="center">
 
                         <ImageView
+                            android:id="@+id/user2"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:contentDescription="story_cd"
