--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -287,6 +287,7 @@
                             android:gravity="center">
 
                             <ImageView
+                                android:id="@+id/highlight1"
                                 android:layout_width="75dp"
                                 android:layout_height="75dp"
                                 android:contentDescription="story_cd"
