--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,23 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/nav_home_selector"
         android:title="@string/Home" />
     <item
         android:id="@+id/explore"
-        android:icon="@drawable/search"
+        android:icon="@drawable/nav_search_selector"
         android:title="@string/Explore" />
     <item
         android:id="@+id/create"
-        android:icon="@drawable/create"
+        android:icon="@drawable/nav_create_selector"
         android:title="@string/Create" />
     <item
         android:id="@+id/notifications"
-        android:icon="@drawable/notif_heart"
+        android:icon="@drawable/nav_notifications_selector"
         android:title="@string/Notifications" />
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/oval"
+        android:icon="@drawable/nav_profile_selector"
         android:title="@string/Profile"/>
 
 </menu>
