--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -72,7 +72,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/hamburger"
-                        android:tint="@color/orange_app"
+                        app:tint="@color/orange_app"
                         />
 
                 </LinearLayout>
