--- a/app/src/main/res/layout/activity_igdirect.xml
+++ b/app/src/main/res/layout/activity_igdirect.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:orientation="horizontal"
         android:padding="16dp"
         android:id="@+id/topbar"
@@ -103,8 +103,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- DM Item 1 -->
             <LinearLayout
+                android:id="@+id/dmOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -158,7 +158,6 @@
                     app:tint="@color/orange_app"/>
             </LinearLayout>
 
-            <!-- DM Item 2 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -213,7 +212,6 @@
                     app:tint="@color/orange_app"/>
             </LinearLayout>
 
-            <!-- DM Item 3 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -268,7 +266,6 @@
                     app:tint="@color/orange_app"/>
             </LinearLayout>
 
-            <!-- DM Item 4 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -323,7 +320,6 @@
                     app:tint="@color/orange_app"/>
             </LinearLayout>
 
-            <!-- DM Item 5 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
